# im-gateway

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  start.sh
dicts/: dict  group1  group2  group3  group4  private1  private2  private3
docs/: 0001-控制协议添加断线标识的提案.md  0002-登陆流程优化.md  SDK架构设计.md  SDK网络层设计.md  rfcs_0000-template.md  优化思路和踩坑.md  关于连接管理的分流限流基础方案设计.docx  压缩技术选型.md  后续工作.md  弱网处理备忘录.md  弱网实施当前进度以及问题和改进.md  数据交换流程及需求对接.md  服务出口流量过大解决方法技术调研.md  服务器配置.md  消息协议.md  消息协议调整版1.11.docx  连接层弱网实施方案.md  连接层控制协议.md  连接层推送协议.md
link/: Cargo.toml  config.toml
link/src/: axum_handler.rs  config.rs  conhash.rs  event_loop.rs  kafka.rs  linker.rs  main.rs  processor.rs  redis.rs  snowflake.rs  socket_addr.rs
link/src/conhash/: mod.rs  node.rs
link/src/kafka/: message.rs  mod.rs
link/src/linker/: ack_window.rs  auth.rs  control_protocol.rs  message.rs  mod.rs  tcp.rs  websocket.rs
link/src/linker/protocol/: content.rs  control.rs  message.rs  mod.rs  token.rs
link/src/processor/: auth.rs  chat.rs  event_loop.rs  message.rs  mod.rs
local-sync/: README.md
local-sync/src/: broadcast.rs  lib.rs  once_cell.rs  oneshot.rs  semaphore.rs
local-sync/src/mpsc/: bounded.rs  chan.rs  unbounded.rs
local-sync/src/stream_wrappers/: bounded.rs  unbounded.rs
proxy/: Cargo.toml  config.toml
proxy/src/: axum_handler.rs  config.rs  kafka.rs  main.rs  protocol.rs  redis.rs  socket_addr.rs
rskafka/: .cargo_vcs_info.json  Cargo.toml
rskafka/src/client/: producer.rs
sdk-link/: Cargo.toml
sdk-link/src/: lib.rs  snowflake.rs
sdk-link/src/protocol/: content.rs  control.rs  mod.rs
sh/: stop.sh
