[package]
authors = ["qians <qiangezaici@outlook.com>"]
edition = "2021"
name = "im-infra-link"
version = "1.0.0"

[[bin]]
name = "im-infra-link"
path = "src/main.rs"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
axum = { version = "0.6", features = ["ws", "headers", "macros"] }
serde = { version = "1", features = ["rc"] }
serde_derive = "1"
serde_json = "1"
hex = { version = "0.4", features = ["serde"] }
toml = "0.7"
time = "0.3"
md-5 = "0.10"
num_cpus = "1"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
bytes = "1"
ahash = "0.8"
chrono = { version = "0.4" }
fred = { version = "6", features = ["tokio-rustls"] }
# rskafka = { version = "0.3" }
rskafka = { version = "0.3", path = "../rskafka" }
local-sync = { version = "0.1", path = "../local-sync" }
openraft = "0.8"
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
once_cell = { version = "1", default-features = false }
clap = { version = "4", features = ["derive"] }
core_affinity = "0.8"
bitflags = "2.3.1"

[dev-dependencies]
once_cell = "1"

