[package]
authors = ["qians <qiangezaici@outlook.com>"]
edition = "2021"
name = "im-infra-link"
version = "1.0.0"

[[bin]]
name = "im-infra-link"
path = "src/main.rs"

[dependencies]
ahash = "0.8"
anyhow = "1"
axum = {version = "0.6", features = ["ws", "headers", "macros"]}
bytes = "1"
chrono = {version = "0.4"}
fred = {version = "6", features = ["tokio-rustls"]}
futures = "0.3"
hex = {version = "0.4", features = ["serde"]}
md-5 = "0.10"
num_cpus = "1"
serde = {version = "1", features = ["rc"]}
serde_derive = "1"
serde_json = "1"
time = "0.3"
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"
tokio-util = {version = "0.7", features = ["codec"]}
toml = "0.7"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
uuid = {version = "1", features = ["v4", "fast-rng", "macro-diagnostics"]}
# rskafka = { version = "0.3" }
bitflags = "2.3.1"
clap = {version = "4", features = ["derive"]}
core_affinity = "0.8"
local-sync = {version = "0.1", path = "../local-sync"}
once_cell = {version = "1", default-features = false}
openraft = "0.8"
reqwest = {version = "0.11", features = [
  "json",
  "rustls-tls",
], default-features = false}
rskafka = {version = "0.3", path = "../rskafka"}

[dev-dependencies]
once_cell = "1"
