[package]
name = "im-infra-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-stream = "0.1"
tokio = { version = "1", features = ["full"] }
toml = "0.7"
time = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
axum = { version = "0.6", features = ["ws", "headers", "macros"] }
anyhow = "1"
tracing = "0.1"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = { version = "1", default-features = false }
clap = { version = "4", features = ["derive"] }
rskafka = { version = "0.3" }
# rskafka = { version = "0.3", path = "../rskafka" }
fred = { version = "6.0.0", features = ["tokio-rustls"] }
