[package]
name = "sdk-link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
anyhow = "1"
futures = "0.3"
tokio = {version = "1", features = ["full"]}
tokio-util = {version = "0.7", features = ["codec"]}
tokio-stream = "0.1"
serde = "1"
serde_json = "1"
serde_derive = "1"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}